--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="map"></div>
     <div class="map-overlay top">
         <button style="font-size: 2em" onclick="move()">
-            Show stops between TRICHY and PUDUKOTTAI
+            Show stops between MIT and HARVARD
         </button>
     </div>
     <script src="./mapanimation.js"></script> 
